docs/api/qiskit/0.29/qiskit.circuit.library.VBERippleCarryAdder.mdx
---
title: VBERippleCarryAdder
description: API reference for qiskit.circuit.library.VBERippleCarryAdder
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.VBERippleCarryAdder
---

# VBERippleCarryAdder

<Class id="qiskit.circuit.library.VBERippleCarryAdder" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/circuit/library/arithmetic/adders/vbe_ripple_carry_adder.py" signature="VBERippleCarryAdder(num_state_qubits, kind='full', name='VBERippleCarryAdder')">
  Bases: `qiskit.circuit.library.arithmetic.adders.adder.Adder`

  The VBE ripple carry adder \[1].

  This circuit performs inplace addition of two equally-sized quantum registers. As an example, a classical adder circuit that performs full addition (i.e. including a carry-in bit) on two 2-qubit sized registers is as follows:

  ```python
            ┌────────┐                       ┌───────────┐┌──────┐
     cin_0: ┤0       ├───────────────────────┤0          ├┤0     ├
            │        │                       │           ││      │
       a_0: ┤1       ├───────────────────────┤1          ├┤1     ├
            │        │┌────────┐     ┌──────┐│           ││  Sum │
       a_1: ┤        ├┤1       ├──■──┤1     ├┤           ├┤      ├
            │        ││        │  │  │      ││           ││      │
       b_0: ┤2 Carry ├┤        ├──┼──┤      ├┤2 Carry_dg ├┤2     ├
            │        ││        │┌─┴─┐│      ││           │└──────┘
       b_1: ┤        ├┤2 Carry ├┤ X ├┤2 Sum ├┤           ├────────
            │        ││        │└───┘│      ││           │
    cout_0: ┤        ├┤3       ├─────┤      ├┤           ├────────
            │        ││        │     │      ││           │
  helper_0: ┤3       ├┤0       ├─────┤0     ├┤3          ├────────
            └────────┘└────────┘     └──────┘└───────────┘
  ```

  Here *Carry* and *Sum* gates correspond to the gates introduced in \[1]. *Carry\_dg* correspond to the inverse of the *Carry* gate. Note that in this implementation the input register qubits are ordered as all qubits from the first input register, followed by all qubits from the second input register. This is different ordering as compared to Figure 2 in \[1], which leads to a different drawing of the circuit.

  **References:**

  \[1] Vedral et al., Quantum Networks for Elementary Arithmetic Operations, 1995. [arXiv:quant-ph/9511018](https://arxiv.org/pdf/quant-ph/9511018.pdf)

  **Parameters**

  *   **num\_state\_qubits** (`int`) – The size of the register.
  *   **kind** (`str`) – The kind of adder, can be `'full'` for a full adder, `'half'` for a half adder, or `'fixed'` for a fixed-sized adder. A full adder includes both carry-in and carry-out, a half only carry-out, and a fixed-sized adder neither carry-in nor carry-out.
  *   **name** (`str`) – The name of the circuit.

  **Raises**

  **ValueError** – If `num_state_qubits` is lower than 1.

  ## Attributes

  ### ancillas

  <Attribute id="qiskit.circuit.library.VBERippleCarryAdder.ancillas" name="ancillas">
    Returns a list of ancilla bits in the order that the registers were added.
  </Attribute>

  ### calibrations

  <Attribute id="qiskit.circuit.library.VBERippleCarryAdder.calibrations" name="calibrations">
    Return calibration dictionary.

    **The custom pulse definition of a given gate is of the form**

    \{‘gate\_name’: \{(qubits, params): schedule}}
  </Attribute>

  ### clbits

  <Attribute id="qiskit.circuit.library.VBERippleCarryAdder.clbits" name="clbits">
    Returns a list of classical bits in the order that the registers were added.
  </Attribute>

  ### data

  <Attribute id="qiskit.circuit.library.VBERippleCarryAdder.data" name="data">
    Return the circuit data (instructions and context).

    **Returns**

    a list-like object containing the tuples for the circuit’s data.

    Each tuple is in the format `(instruction, qargs, cargs)`, where instruction is an Instruction (or subclass) object, qargs is a list of Qubit objects, and cargs is a list of Clbit objects.

    **Return type**

    QuantumCircuitData
  </Attribute>

  ### extension\_lib

  <Attribute id="qiskit.circuit.library.VBERippleCarryAdder.extension_lib" name="extension_lib" attributeValue="= 'include &#x22;qelib1.inc&#x22;;'" />

  ### global\_phase

  <Attribute id="qiskit.circuit.library.VBERippleCarryAdder.global_phase" name="global_phase">
    Return the global phase of the circuit in radians.
  </Attribute>

  ### header

  <Attribute id="qiskit.circuit.library.VBERippleCarryAdder.header" name="header" attributeValue="= 'OPENQASM 2.0;'" />

  ### instances

  <Attribute id="qiskit.circuit.library.VBERippleCarryAdder.instances" name="instances" attributeValue="= 16" />

  ### metadata

  <Attribute id="qiskit.circuit.library.VBERippleCarryAdder.metadata" name="metadata">
    The user provided metadata associated with the circuit

    The metadata for the circuit is a user provided `dict` of metadata for the circuit. It will not be used to influence the execution or operation of the circuit, but it is expected to be passed between all transforms of the circuit (ie transpilation) and that providers will associate any circuit metadata with the results it returns from execution of that circuit.
  </Attribute>

  ### num\_ancillas

  <Attribute id="qiskit.circuit.library.VBERippleCarryAdder.num_ancillas" name="num_ancillas">
    Return the number of ancilla qubits.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.VBERippleCarryAdder.num_clbits" name="num_clbits">
    Return number of classical bits.
  </Attribute>

  ### num\_parameters

  <Attribute id="qiskit.circuit.library.VBERippleCarryAdder.num_parameters" name="num_parameters">
    Convenience function to get the number of parameter objects in the circuit.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.VBERippleCarryAdder.num_qubits" name="num_qubits">
    Return number of qubits.
  </Attribute>

  ### num\_state\_qubits

  <Attribute id="qiskit.circuit.library.VBERippleCarryAdder.num_state_qubits" name="num_state_qubits">
    The number of state qubits, i.e. the number of bits in each input register.

    **Return type**

    `int`

    **Returns**

    The number of state qubits.
  </Attribute>

  ### parameters

  <Attribute id="qiskit.circuit.library.VBERippleCarryAdder.parameters" name="parameters">
    Convenience function to get the parameters defined in the parameter table.
  </Attribute>

  ### prefix

  <Attribute id="qiskit.circuit.library.VBERippleCarryAdder.prefix" name="prefix" attributeValue="= 'circuit'" />

  ### qubits

  <Attribute id="qiskit.circuit.library.VBERippleCarryAdder.qubits" name="qubits">
    Returns a list of quantum bits in the order that the registers were added.
  </Attribute>
</Class>

